--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -11,10 +11,13 @@
 
     <!-- linking -->
     <link rel="stylesheet" href="/dist/css/styles.css">
+    <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css'>
 
 </head>
 
 <body>
+
+    {{ user }}
 
     <div id='root'>
         <!-- react is built here -->
