--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -14,6 +14,7 @@
     <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
 
 </head>
 
@@ -23,7 +24,7 @@
         <!-- react is built here -->
     </div>
     <!-- scripts -->
-    <script src='{{ url_for('static', filename='js/bundle.js') }}'></script>
+    <script src="{{ url_for('static', filename='js/bundle.js') }}"></script>
 </body>
 
 </html>
