--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -1,30 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
     <title>Ouate de phoque</title>
-    <meta name="description" content="Ouate de phoque">
-    <meta name="author" content="ODP">
+    <meta name="description" content="Ouate de phoque" />
+    <meta name="author" content="ODP" />
 
     <!-- linking -->
-    <link rel="stylesheet" href="/dist/css/styles.css">
-    <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css'>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="/dist/css/quill.snow.css">
+    <link rel="stylesheet" href="/dist/css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/dist/css/quill.snow.css" />
 
-</head>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/dist/images/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/dist/images/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/dist/images/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/dist/images/favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/dist/images/favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+  </head>
 
-<body>
-
-    <div id='root'>
-        <!-- react is built here -->
-    </div>
+  <body>
+    <div id="root"><!-- react is built here --></div>
     <!-- scripts -->
     <script src="{{ url_for('static', filename='js/bundle.js') }}"></script>
-</body>
-
+  </body>
 </html>
